# offlineaihelper

./: .env.example  .gitignore  README.md  install.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  setup-models.ps1
config/: models.json  moderation.policy.json
node/: package-lock.json  package.json
node/src/: cli.js  client.js  index.js
node/tests/: cli.test.js  client.test.js
offlineaihelper/: __init__.py  app.py  config.py  moderation.py  ollama.py  policy.py
scripts/: pull-models.ps1
src/offlineaihelper/: __init__.py  app.py  cli.py  config.py  policy.py  server.py  sync_app.py  sync_ollama.py
src/offlineaihelper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/offlineaihelper/moderation/: __init__.py  audit.py  deterministic_rules.py  llm_moderator.py  policy_engine.py
src/offlineaihelper/moderation/rule_sets/: default.json
src/offlineaihelper/ollama/: client.py
src/offlineaihelper/routing/: model_router.py
tests/: conftest.py  test_moderation.py  test_pipeline_integration.py
tests/integration/: test_moderation_pipeline_mocked_ollama.py
tests/unit/: test_server.py
tests/unit/moderation/: test_deterministic_rules.py  test_policy_engine.py
tests/unit/ollama/: test_client.py
tests/unit/routing/: test_model_router.py
